intTests/test_type_errors/unify005.log.good
Loading file "unify005.saw"
Type errors:
  unify005.saw:10:15-10:25: Error: Type mismatch.
    Expected: Int
    Found:    ()

  unify005.saw:10:9-10:12: Note: The type Int arises from this type annotation
  unify005.saw:9:13-9:15: Note: The type () arises from the type of this term


FAILED
