intTests/test_type_errors/unify005.saw
//
// Exercise failure arising from using the unify call in the
// TyUnifyVar case of the Application case of inferExpr. This is when
// we don't have a function type in the environment, just a tyvar, so
// we make up a function type up and unify it with that tyvar. The
// unify call itself can't fail, but it can produce later errors.
//

let f g = g ();
let x : Int = f (\x -> x);



